# bob.learn.em

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .travis.yml  MANIFEST.in  README.md  README.rst  buildout.cfg  develop.cfg  pyproject.toml  requirements.txt  setup.py  test-requirements.txt  version.txt
bob/learn/em/: MAP_gmm_trainer.cpp  ML_gmm_trainer.cpp  __MAP_gmm_trainer__.py  __ML_gmm_trainer__.py  __empca_trainer__.py  __init__.py  __isv_trainer__.py  __ivector_trainer__.py  __jfa_trainer__.py  __kmeans_trainer__.py  __plda_trainer__.py  empca_trainer.cpp  factor_analysis.py  gaussian.cpp  gmm.py  gmm_base_trainer.cpp  gmm_machine.cpp  gmm_stats.cpp  isv_base.cpp  isv_machine.cpp  isv_trainer.cpp  ivector.py  ivector_machine.cpp  ivector_trainer.cpp  jfa_base.cpp  jfa_machine.cpp  jfa_trainer.cpp  k_means.py  kmeans.py  kmeans_machine.cpp  kmeans_trainer.cpp  linear_scoring.cpp  linear_scoring.py  machine.py  main.cpp  main.h  map_gmm_trainer.cpp  ml_gmm_trainer.cpp  plda_base.cpp  plda_machine.cpp  (+7 more)
bob/learn/em/cluster/: __init__.py  k_means.py
bob/learn/em/clustering/: kmeans.py
bob/learn/em/cpp/: BICMachine.cpp  BICTrainer.cpp  EMPCATrainer.cpp  FABase.cpp  FABaseTrainer.cpp  GMMBaseTrainer.cpp  GMMMachine.cpp  GMMStats.cpp  Gaussian.cpp  ISVBase.cpp  ISVMachine.cpp  ISVTrainer.cpp  IVectorMachine.cpp  IVectorTrainer.cpp  JFABase.cpp  JFAMachine.cpp  JFATrainer.cpp  KMeansMachine.cpp  KMeansTrainer.cpp  LinearScoring.cpp  MAP_GMMTrainer.cpp  ML_GMMTrainer.cpp  PLDAMachine.cpp  PLDATrainer.cpp  ZTNorm.cpp
bob/learn/em/data/: gmm_MAP.hdf5  gmm_ML.hdf5  gmm_ML_32bit_release.hdf5  gmm_ML_legacy.hdf5  ivector_fit_data.hdf5  ivector_ref_nosigma_step2.hdf5  ivector_test_data.hdf5  ztnorm_eval_tnorm.hdf5
bob/learn/em/linear/: __init__.py  wccn.py  whitening.py
bob/learn/em/mixture/: __init__.py  gmm.py  linear_scoring.py
bob/learn/em/script/: em.py  train.py
bob/learn/em/test/: test_em.py  test_factor_analysis.py  test_gaussian.py  test_gmm.py  test_ivector.py  test_ivector_trainer.py  test_jfa.py  test_jfa_trainer.py  test_kmeans.py  test_kmeans_trainer.py  test_linear.py  test_linearscoring.py  test_picklability.py  test_plda.py  test_plda_trainer.py  test_ztnorm.py
bob/learn/misc/: GaborWaveletTransform.cpp  MAP_gmm_trainer.cpp  ML_gmm_trainer.cpp  __MAP_gmm_trainer__.py  __ML_gmm_trainer__.py  __empca_trainer__.py  __init__.py  __isv_trainer__.py  __ivector_trainer__.py  __jfa_trainer__.py  __kmeans_trainer__.py  __plda_trainer__.py  bic.cpp  blitz_numpy.cpp  empca_trainer.cpp  gaussian.cpp  gmm.cpp  gmm_base_trainer.cpp  gmm_machine.cpp  gmm_stats.cpp  isv_base.cpp  isv_machine.cpp  isv_trainer.cpp  ivector.cpp  ivector_machine.cpp  ivector_trainer.cpp  jfa.cpp  jfa_base.cpp  jfa_machine.cpp  jfa_trainer.cpp  kmeans_machine.cpp  kmeans_trainer.cpp  linear_scoring.cpp  linearscoring.cpp  main.cpp  main.h  ndarray.cpp  plda.cpp  plda_base.cpp  plda_machine.cpp  (+20 more)
bob/learn/misc/cpp/: BICMachine.cpp  BICTrainer.cpp  EMPCATrainer.cpp  FABase.cpp  FABaseTrainer.cpp  GMMBaseTrainer.cpp  GMMMachine.cpp  GMMStats.cpp  GMMTrainer.cpp  Gaussian.cpp  ISVBase.cpp  ISVMachine.cpp  ISVTrainer.cpp  IVectorMachine.cpp  IVectorTrainer.cpp  JFABase.cpp  JFAMachine.cpp  JFATrainer.cpp  KMeansMachine.cpp  KMeansTrainer.cpp  LinearScoring.cpp  MAP_GMMTrainer.cpp  ML_GMMTrainer.cpp  PLDAMachine.cpp  PLDATrainer.cpp  WienerMachine.cpp  WienerTrainer.cpp  ZTNorm.cpp
bob/learn/misc/data/: ztnorm_znorm_eval.hdf5  ztnorm_znorm_tnorm.hdf5
bob/learn/misc/old/: bic.cc  bic_trainer.cc  blitz_numpy.cc  empca_trainer.cc  gaussian.cc  gmm.cc  gmm_trainer.cc  ivector.cc  ivector_trainer.cc  jfa.cc  jfa_trainer.cc  kmeans.cc  kmeans_trainer.cc  linearscoring.cc  machine.cc  main.cc  ndarray.cc  (+7 more)
conda/: meta.yaml
doc/: c_cpp_api.rst  conf.py  extra-intersphinx.txt  guide.rst  index.rst  links.rst  nitpick-exceptions.txt  py_api.rst
doc/plot/: plot_ISV.py  plot_JFA.py  plot_MAP.py  plot_ML.py  plot_Tnorm.py  plot_ZTnorm.py  plot_Znorm.py  plot_iVector.py  plot_kmeans.py
tests/: test_factor_analysis.py  test_gmm.py  test_ivector.py  test_kmeans.py  test_linear.py
tests/data/: gmm_MAP.hdf5  gmm_ML_32bit_debug.hdf5  gmm_ML_fitted.hdf5  ivector_gs1.hdf5  ivector_gs2.hdf5  ivector_ref_nosigma_step1.hdf5  ivector_results.hdf5  stats.hdf5
xbob/learn/misc/: gabor.cpp  gaussian.cpp  gmm_trainer.cpp  hdf5.cpp  jfa_trainer.cpp  kmeans.cpp  main.cpp  ndarray.h  test_bic.py  test_em.py  test_gaussian.py  test_gmm.py  test_ivector.py  test_jfa.py  test_jfa_trainer.py  test_kmeans.py  test_kmeans_trainer.py  test_linearscoring.py  test_plda.py  test_plda_trainer.py  test_wiener.py  test_wiener_trainer.py  test_ztnorm.py  tinyvector.cpp  version.cpp  wiener_trainer.cpp  ztnorm.cpp
(+69 files in other folders)
