[build-system]
    requires = ["setuptools>=61.0.0", "wheel"]
    build-backend = "setuptools.build_meta"

[project]
    name = "bob.learn.em"
    version = "3.3.1b0"
    requires-python = ">=3.9"
    description = "Bindings for EM machines and trainers of Bob"
    dynamic = ["readme"]
    license = {text = "BSD 3-Clause License"}
    authors = [
    {name = "Andre Anjos", email = "andre.anjos@idiap.ch"},
    ]
    keywords = ["bob", "em", "expectation-maximization"]

    classifiers=[
        "Framework :: Bob",
        "Development Status :: 4 - Beta",
        "Intended Audience :: Developers",
        "License :: OSI Approved :: BSD License",
        "Natural Language :: English",
        "Programming Language :: Python",
        "Programming Language :: Python :: 3",
        "Topic :: Software Development :: Libraries :: Python Modules",
    ]
    dependencies = [
        "bob",
        "dask",
        "dask-ml",
        "h5py",
        "scikit-learn",
    ]

[project.urls]
    documentation = "https://www.idiap.ch/software/bob/docs/bob/bob.learn.em/master/sphinx/"
    homepage = "https://pypi.org/project/bob.learn.em/"
    repository = "https://gitlab.idiap.ch/bob/bob.learn.em"
    changelog = "https://gitlab.idiap.ch/bob/bob.learn.em/-/releases"

[project.optional-dependencies]
    qa = ["pre-commit"]
    doc = [
        "sphinx",
        "sphinx_rtd_theme",
        "sphinx-autodoc-typehints",
        "sphinxcontrib-programoutput",
        "matplotlib",
        ]
    test = [
        "pytest",
        "pytest-cov",
        "coverage",
        ]

[tool.setuptools]
    zip-safe = false
    package-dir = {"" = "src"}

[tool.setuptools.dynamic]
    readme = {file = "README.md", content-type = "text/markdown"}

[tool.distutils.bdist_wheel]
    universal = true

[tool.isort]
    profile = "black"
    line_length = 80
    order_by_type = true
    lines_between_types = 1

[tool.black]
    line-length = 80

[tool.coverage.run]
    relative_files = true

[tool.pytest.ini_options]
    addopts = [
        "--import-mode=append",
        "--cov-report=term-missing",
        "--cov=bob.learn.em",
    ]
    junit_logging = "all"
    junit_log_passing_tests = false
